--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.3",
     "chart.js": "^4.4.7",
